fix uploaded videos don't load on safari

--- a/components/text.module.css
+++ b/components/text.module.css
@@ -184,7 +184,6 @@
 .p:has(> .mediaContainer) .mediaContainer
 {
     display: flex;
-    width: min-content;
     max-width: 100%;
 }
 
